<resources>
    <string name="app_name">MissionHub</string>
    <string name="action_search">Search</string>
    <string name="action_login">Login</string>
    <string name="action_close">Close</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_restart">Restart</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_assign">Assign</string>
    <string name="action_delete">Delete</string>
    <string name="action_permissions">Permissions</string>
    <string name="action_archive">Archive</string>
    <string name="action_email">Email</string>
    <string name="action_text">Text</string>
    <string name="action_no_permissions">You do not have the required permissions to perform this
        action.
    </string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_save">Save</string>
    <string name="action_labels">Labels</string>
    <string name="action_done">Done</string>
    <string name="action_record_interaction">Record Interaction</string>
    <string name="action_press_to_quit">Press once more to quit MissionHub.</string>
    <string name="action_index">Index</string>
    <string name="menu_surveys">Surveys</string>
    <string name="menu_div_account">Account</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_organization">Organization</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_div_missionhub">MissionHub</string>
    <string name="menu_about">About</string>
    <string name="menu_help_center">Help Center</string>
    <string name="menu_open">Open menu drawer</string>
    <string name="menu_close">Close menu drawer</string>
    <string name="my_contacts_title">My Contacts</string>
    <string name="my_contacts_all">All</string>
    <string name="my_contacts_in_progress">In-Progress</string>
    <string name="my_contacts_completed">Completed</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="display_status">Status</string>
    <string name="display_gender">Gender</string>
    <string name="display_permission">Permission</string>
    <string name="display_phone">Phone</string>
    <string name="display_email">Email</string>
    <string name="sort_off">
        <b>Sort:</b>
        Off
    </string>
    <string name="sort_asc">
        <b>Sort:</b>
        Asc
    </string>
    <string name="sort_desc">
        <b>Sort:</b>
        Desc
    </string>
    <string name="contact_activity_title">Contact</string>
    <string name="contact_nav_info">Information</string>
    <string name="contact_nav_surveys">Surveys</string>
    <string name="contact_info_expand">Show More</string>
    <string name="contact_info_collapse">Show Less</string>
    <string name="contact_add_comment">Add a comment</string>
    <string name="contact_comment_actions">Comment Actions</string>
    <string name="contact_comment_deleted">Comment deleted</string>
    <string name="contact_cannot_delete_comment">Could not delete comment.</string>
    <string name="contact_cannot_comment">Please set a comment, status, or rejoicable before
        saving.
    </string>
    <string name="contact_comment_saved">Comment saved</string>
    <string name="contact_comment_failed_to_save">Failed to save comment</string>
    <string name="contact_comment_loading">Loading Comments…</string>
    <string name="contact_already_contact">This person is already a contact</string>
    <string name="contact_already_leader">This person is already a leader</string>
    <string name="contact_role_changed">Role changed</string>
    <string name="contact_role_failed">Failed to change role</string>
    <string name="contact_surveys_no_key">Unknown Keyword</string>
    <string name="contact_surveys_no_q">Unknown Question</string>
    <string name="contact_surveys_no_a">Not answered</string>
    <string name="contact_surveys_updating_org">Updating organization keywords and questions
    </string>
    <string name="profile_group_gender">Gender</string>
    <string name="profile_group_phone">Phone</string>
    <string name="profile_group_address">Address</string>
    <string name="profile_group_email">Email</string>
    <string name="profile_group_facebook">Facebook</string>
    <string name="about_activity_title">About MissionHub</string>
    <string name="about_tag">We\'re here to make it easier for you to care for the people who need
        you most.
    </string>
    <string name="about_licenses">Open source licenses</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_terms">Terms and Conditions</string>
    <string name="about_feedback">Have a problem? Want a new feature?</string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_copyright">© 2013 Cru Global</string>
    <string name="about_feedback_email">support@missionhub.com</string>
    <string name="about_privacy_url">https://www.missionhub.com/privacy</string>
    <string name="about_terms_url">https://www.missionhub.com/terms</string>
    <string name="main_help_url">http://blog.missionhub.com</string>
    <string name="main_logged_out">You have been logged out of MissionHub.</string>
    <string name="main_invalid_token">Your MissionHub authentication token is invaild. Please login
        again.
    </string>
    <string name="session_resuming">Resuming session…</string>
    <string name="session_add_account">Add Account</string>
    <string name="session_choose_account">Choose account…</string>
    <string name="session_no_longer_admin_or_user">You are no longer an admin or user in your
        preferred
        organization. Selecting your primary.
    </string>
    <string name="session_updating_permissions">Loading Permissions…</string>
    <string name="session_updating_person">Loading your account…</string>
    <string name="session_updating_current_organization">Loading your current organization…</string>
    <string name="session_logging_in_facebook">Logging in with Facebook…</string>
    <string name="pref_activity_title">Preferences</string>
    <string name="pref_organization">Organization:</string>
    <string name="auth_activity_title">Add a MissionHub account</string>
    <string name="auth_fetching_account_info">Fetching Account Information…</string>
    <string name="auth_duplicate_account">Account for %1$s already exists.</string>
    <string name="exception_helper_error">Error</string>
    <string name="exception_helper_support">Email support@missionhub.com if the problem persists.
    </string>
    <string name="exception_helper_network_error">Network Error</string>
    <string name="exception_helper_mh_down">The MissionHub server is currently down. Please try
        again in a few
        minutes.
    </string>
    <string name="exception_helper_mh_not_responding">Either your internet connection is very slow
        or the MissionHub
        servers are not currently responding. Please try again in a few minutes.
    </string>
    <string name="no_person_exception">No person in SQLite DB</string>
    <string name="no_account_exception">No MissionHub Account Found</string>
    <string name="unexpected_data">The MissionHub server returned unexpected data.</string>
    <string name="network_unavailable_exception">MissionHub is currently working offline. Check your
        internet connection
        and retry.
    </string>
    <string name="network_unavailable_exception_title">Offline Error</string>
    <string name="intent_helper_no_browser">No web browser available.</string>
    <string name="intent_helper_no_calling">No calling client available.</string>
    <string name="intent_helper_no_sms">No sms client available.</string>
    <string name="intent_helper_send_email">Send Email</string>
    <string name="intent_helper_no_email">No email client available.</string>
    <string name="intent_helper_no_facebook">Could not open Facebook profile.</string>
    <string name="intent_helper_no_map">Could not open map.</string>
    <string name="intent_helper_dial_number">Dial Number</string>
    <string name="intent_helper_send_sms">Send SMS</string>
    <string name="status_uncontacted">Uncontacted</string>
    <string name="status_attempted_contact">Attempted Contact</string>
    <string name="status_contacted">Contacted</string>
    <string name="status_completed">Completed</string>
    <string name="status_do_not_contact">Do Not Contact</string>
    <string name="permission_admin">Admin</string>
    <string name="permission_no_permissions">No Permissions</string>
    <string name="permission_user">User</string>
    <string name="label_sent">100% Sent</string>
    <string name="label_leader">Leader</string>
    <string name="label_involved">Involved</string>
    <string name="label_engaged_disciple">Engaged Disciple</string>
    <string name="label_alumni">Alumni</string>
    <string name="interaction_type_comment">Comment Only</string>
    <string name="interaction_type_spiritual_conversation">Spiritual Conversation</string>
    <string name="interaction_type_gospel_presentation">Personal Evangelism</string>
    <string name="interaction_type_prayed_to_receive_christ">Personal Evangelism Decision for
        Christ
    </string>
    <string name="interaction_type_holy_spirit_presentation">Holy Spirit Presentation</string>
    <string name="interaction_type_graduating_on_mission">Graduating on Mission</string>
    <string name="interaction_type_faculty_on_mission">Faculty on Mission</string>
    <string name="interaction_type_action_comment">
        <![CDATA[<b>%1$s</b> shared a comment:]]></string>
    <string name="interaction_type_action_spiritual_conversation">
        <![CDATA[<b>%1$s</b> initiated a spiritual conversation with <b>%2$s</b>.]]></string>
    <string name="interaction_type_action_gospel_presentation">
        <![CDATA[<b>%1$s</b> shared the gospel with <b>%2$s</b>.]]></string>
    <string name="interaction_type_action_prayed_to_receive_christ">
        <![CDATA[<b>%2$s</b> indicated a decision to receive Christ with <b>%1$s</b>.]]></string>
    <string name="interaction_type_action_holy_spirit_presentation">
        <![CDATA[<b>%1$s</b> shared a Holy Spirit presentation with <b>%2$s</b>.]]></string>
    <string name="interaction_type_action_graduating_on_mission">
        <![CDATA[<b>%1$s</b> helped <b>%2$s</b> develop a plan for graduating on mission.]]></string>
    <string name="interaction_type_action_faculty_on_mission">
        <![CDATA[<b>%1$s</b> helped <b>%2$s</b> develop a plan to be a faculty member on mission.]]></string>
    <string name="interaction_type_action_unknown">
        <![CDATA[<b>%1$s</b> interacted with <b>%2$s</b>.]]></string>
    <string name="profile_label_action"><![CDATA[<b>%1$s</b> label was first applied.]]></string>
    <string name="profile_survey_action">
        <![CDATA[<b>%1$s</b> added new information via <b>%2$s</b> survey.]]></string>
    <string name="interaction_comment_message">
        <![CDATA[<b>%1$s wrote:</b> <i>\"%2$s\"</i>]]></string>
    <string name="interaction_updated_at">
        <![CDATA[- last updated by %1$s on %2$s at %3$s.]]></string>
    <string name="gender_male">Male</string>
    <string name="add_contact_section_phone">Phone</string>
    <string name="add_contact_section_address">Address</string>
    <string name="add_contact_name">Name</string>
    <string name="add_contact_gender_male">Male</string>
    <string name="add_contact_gender_female">Female</string>
    <string name="add_contact_email">Email</string>
    <string name="add_contact_address_line1">Line 1</string>
    <string name="add_contact_address_line2">Line 2</string>
    <string name="add_contact_address_city">City</string>
    <string name="add_contact_address_zip">Zip Code</string>
    <string name="add_contact_progress">Please wait. Adding contact…</string>
</resources>