<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/progress_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16.0dip"
        android:visibility="gone" >

        <ProgressBar
            android:id="@android:id/progress"
            style="@style/Holo.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@android:id/text1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.0dip"
            android:layout_toRightOf="@android:id/progress"
            android:gravity="center_vertical"
            android:text="@string/add_contact_progress" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_contact_name"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_contact_gender_male"
                    android:textColor="@color/dark_gray" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_contact_gender_female"
                    android:textColor="@color/dark_gray" />
            </RadioGroup>

            <TextView
                style="@style/MissionHub.CreateContactInfoSectionLabel"
                android:layout_marginTop="8.0dip"
                android:text="@string/add_contact_section_phone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@color/holo_blue_light" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/phone_location"
                    android:ems="10"
                    android:hint="@string/add_contact_section_phone"
                    android:inputType="phone"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/phone_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <TextView
                style="@style/MissionHub.CreateContactInfoSectionLabel"
                android:layout_marginTop="8.0dip"
                android:text="@string/add_contact_email" />

            <View
                android:id="@+id/divider"
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@color/holo_blue_light" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_contact_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                style="@style/MissionHub.CreateContactInfoSectionLabel"
                android:layout_marginTop="8.0dip"
                android:text="@string/add_contact_section_address" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/holo_blue_light" />

            <EditText
                android:id="@+id/address_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_contact_address_line1"
                android:inputType="textCapWords|textPostalAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/address_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_contact_address_line2"
                android:inputType="textCapWords|textPostalAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/address_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_contact_address_city"
                android:inputType="textCapWords|textPostalAddress"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/address_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/address_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/address_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_contact_address_zip"
                android:inputType="numberDecimal|textPostalAddress"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>